--- a/imports/less/App.less
+++ b/imports/less/App.less
@@ -29,10 +29,25 @@
 		outline: 0;
 		cursor: pointer;
 		transition: all 0.3s ease;
+		margin-bottom: 10px;
 
 		&:hover {
 			transform: scale(1.1);
 			opacity: 0.95;
+		}
+
+		&.logout {
+			font-size: 14px;
+			height: 30px;
+			width: 80px;
+			margin: 5px 0;
+			margin-top: 10px;
+			opacity: 0.7;
+
+			&:hover {
+				opacity: 0.95;
+				transform: scale(1);
+			}
 		}
 	}
 
@@ -40,6 +55,7 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		justify-content: center;
 	}
 
 	& .dashboard {
@@ -49,7 +65,75 @@
 
 		& p {
 			font-size: 16px;
-			color: #FFF;
+		}
+	}
+}
+
+.report {
+	width: 450px;
+	min-height: 150px;
+	border-radius: 8px;
+	background: rgba(255, 255, 255, .6); 
+	margin-bottom: 30px;
+	color: #333;
+	box-sizing: border-box;
+	padding: 30px 20px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	box-shadow: 0 0 8px 0 rgba(0,0,0,.3);
+
+	& p {
+		color: #333;
+	}
+
+	& ul {
+		width: 100%;
+		padding-left: 10px;
+
+		& li {
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+
+			& span {
+				font-size: 12px;
+				margin-left: 5px;
+				letter-spacing: -0.3;
+				color: rgba(0, 0, 0, 0.4);
+			}
+		} 
+	}
+
+	h3 {
+		width: 100%;
+		color: @primary;
+		font-size: 20px;
+		margin-top: 10px;
+		margin-bottom: 5px;
+	}
+
+	.tags {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		width: 100%;
+		margin: 5px 0;
+
+		& div {
+			border: 1px solid @primary;
+			border-radius: 100px;
+			margin: 7px 0;
+			margin-right: 10px;
+			padding: 10px 15px;
+
+			& span {
+				font-size: 12px;
+				margin-left: 5px;
+				letter-spacing: -0.3;
+				color: rgba(0, 0, 0, 0.4);
+			}
 		}
 	}
 }
