--- a/imports/less/App.less
+++ b/imports/less/App.less
@@ -67,6 +67,43 @@
 			font-size: 16px;
 		}
 	}
+
+	& .config-button {
+		position: absolute;
+		top: 15px;
+		right: 30px;
+		cursor: pointer;
+	}
+}
+
+.modal {
+	display: flex;
+	flex-direction: column;
+	position: absolute;
+    top: 40px;
+    left: 40px;
+    right: 40px;
+	bottom: 40px;
+	background: #FFF;
+	box-shadow: 0 0 8px 0 rgba(0, 0, 0, .3);
+	box-sizing: border-box;
+	padding: 20px;
+
+	& input {
+		width: 240px;
+	}
+
+	& .x {
+		position: absolute;
+		top: 20px;
+		right: 35px;
+		cursor: pointer;
+	}
+
+	& .confirm {
+		width: 160px;
+		margin-top: 30px;
+	}
 }
 
 .report {
