--- a/imports/less/App.less
+++ b/imports/less/App.less
@@ -3,18 +3,22 @@
 @yellow: #f9e75e;
 
 .app {
-	width: 100vw;
+	min-width: 100vw;
 	min-height: 100vh;
-	background: @primary;
+	background: #FDFDFD;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 
 	& h3 {
-		color: #f2f2f2;
+		color: @primary;
 		font-size: 24px;
 		margin-bottom: 30px;
+
+		&.title {
+			font-size: 32px;
+		}
 	}
 
 	& button {
@@ -52,10 +56,47 @@
 	}
 
 	& .login {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
+		width: 100vw;
+		height: 100vh;
+		background: url("http://smalldata.io/img/homepage.jpg");
+		background-size: cover;
+
+		& h3 {
+			color: #C2C2C2;
+
+			& span {
+				color: #FFF;
+			}
+		}
+
+		& .overlay {
+			background: rgba(0, 0, 0, .4);
+			width: 100vw;
+			height: 100vh;
+			position: absolute;
+			top: 0;
+			left: 0;
+			z-index: 10;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+
+			& h3 {
+				margin-bottom: 12px;
+			}
+
+			& p {
+				color: #FFF;
+				margin: 0 0 32px;
+				font-size: 18px;
+
+				& span {
+					font-weight: bold;
+					color: @yellow;
+				}
+			}
+		}
 	}
 
 	& .dashboard {
@@ -63,8 +104,17 @@
 		flex-direction: column;
 		align-items: center;
 
+		& h3 {
+			margin-bottom: 5px;
+		}
+
 		& p {
 			font-size: 16px;
+
+			&.sub {
+				opacity: 0.4;
+				margin-bottom: 25px;
+			}
 		}
 	}
 
