--- a/client/main.css
+++ b/client/main.css
@@ -1,12 +1,15 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans|Oxygen');
+@import url("https://fonts.googleapis.com/css?family=Open+Sans|Oxygen");
 
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
-h1, h2, h3, p {
+h1,
+h2,
+h3,
+p {
   margin: 0;
-  font-family: 'Oxygen', 'Open Sans', sans-serif;
+  font-family: "Oxygen", "Open Sans", sans-serif;
 }
