--- a/imports/less/App.less
+++ b/imports/less/App.less
@@ -1,227 +1,227 @@
-@primary: #3498DB;
-@lightBlue: #3FD1CB;
+@primary: #3498db;
+@lightBlue: #3fd1cb;
 @yellow: #f9e75e;
 
 .app {
-	min-width: 100vw;
-	min-height: 100vh;
-	background: #FDFDFD;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
+  min-width: 100vw;
+  min-height: 100vh;
+  background: #fdfdfd;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
-	& h3 {
-		color: @primary;
-		font-size: 24px;
-		margin-bottom: 30px;
+  & h3 {
+    color: @primary;
+    font-size: 24px;
+    margin-bottom: 30px;
 
-		&.title {
-			font-size: 32px;
-		}
-	}
+    &.title {
+      font-size: 32px;
+    }
+  }
 
-	& button {
-		background: @yellow;
-		border: none;
-		height: 60px;
-		width: 240px;
-		font-size: 18px;
-		box-shadow: 0 0 8px 0 rgba(0, 0, 0, .3);
-		color: @primary;
-		border-radius: 100px;
-		outline: 0;
-		cursor: pointer;
-		transition: all 0.3s ease;
-		margin-bottom: 10px;
+  & button {
+    background: @yellow;
+    border: none;
+    height: 60px;
+    width: 240px;
+    font-size: 18px;
+    box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.3);
+    color: @primary;
+    border-radius: 100px;
+    outline: 0;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    margin-bottom: 10px;
 
-		&:hover {
-			transform: scale(1.1);
-			opacity: 0.95;
-		}
+    &:hover {
+      transform: scale(1.1);
+      opacity: 0.95;
+    }
 
-		&.logout {
-			font-size: 14px;
-			height: 30px;
-			width: 80px;
-			margin: 5px 0;
-			margin-top: 10px;
-			opacity: 0.7;
+    &.logout {
+      font-size: 14px;
+      height: 30px;
+      width: 80px;
+      margin: 5px 0;
+      margin-top: 10px;
+      opacity: 0.7;
 
-			&:hover {
-				opacity: 0.95;
-				transform: scale(1);
-			}
-		}
-	}
+      &:hover {
+        opacity: 0.95;
+        transform: scale(1);
+      }
+    }
+  }
 
-	& .login {
-		width: 100vw;
-		height: 100vh;
-		background: url("http://smalldata.io/img/homepage.jpg");
-		background-size: cover;
+  & .login {
+    width: 100vw;
+    height: 100vh;
+    background: url("http://smalldata.io/img/homepage.jpg");
+    background-size: cover;
 
-		& h3 {
-			color: #C2C2C2;
+    & h3 {
+      color: #c2c2c2;
 
-			& span {
-				color: #FFF;
-			}
-		}
+      & span {
+        color: #fff;
+      }
+    }
 
-		& .overlay {
-			background: rgba(0, 0, 0, .4);
-			width: 100vw;
-			height: 100vh;
-			position: absolute;
-			top: 0;
-			left: 0;
-			z-index: 10;
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			justify-content: center;
+    & .overlay {
+      background: rgba(0, 0, 0, 0.4);
+      width: 100vw;
+      height: 100vh;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 10;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
 
-			& h3 {
-				margin-bottom: 12px;
-			}
+      & h3 {
+        margin-bottom: 12px;
+      }
 
-			& p {
-				color: #FFF;
-				margin: 0 0 32px;
-				font-size: 18px;
+      & p {
+        color: #fff;
+        margin: 0 0 32px;
+        font-size: 18px;
 
-				& span {
-					font-weight: bold;
-					color: @yellow;
-				}
-			}
-		}
-	}
+        & span {
+          font-weight: bold;
+          color: @yellow;
+        }
+      }
+    }
+  }
 
-	& .dashboard {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
+  & .dashboard {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-		& h3 {
-			margin-bottom: 5px;
-		}
+    & h3 {
+      margin-bottom: 5px;
+    }
 
-		& p {
-			font-size: 16px;
+    & p {
+      font-size: 16px;
 
-			&.sub {
-				opacity: 0.4;
-				margin-bottom: 25px;
-			}
-		}
-	}
+      &.sub {
+        opacity: 0.4;
+        margin-bottom: 25px;
+      }
+    }
+  }
 
-	& .config-button {
-		position: absolute;
-		top: 15px;
-		right: 30px;
-		cursor: pointer;
-	}
+  & .config-button {
+    position: absolute;
+    top: 15px;
+    right: 30px;
+    cursor: pointer;
+  }
 }
 
 .modal {
-	display: flex;
-	flex-direction: column;
-	position: absolute;
-    top: 40px;
-    left: 40px;
-    right: 40px;
-	bottom: 40px;
-	background: #FFF;
-	box-shadow: 0 0 8px 0 rgba(0, 0, 0, .3);
-	box-sizing: border-box;
-	padding: 20px;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 40px;
+  left: 40px;
+  right: 40px;
+  bottom: 40px;
+  background: #fff;
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.3);
+  box-sizing: border-box;
+  padding: 20px;
 
-	& input {
-		width: 240px;
-	}
+  & input {
+    width: 240px;
+  }
 
-	& .x {
-		position: absolute;
-		top: 20px;
-		right: 35px;
-		cursor: pointer;
-	}
+  & .x {
+    position: absolute;
+    top: 20px;
+    right: 35px;
+    cursor: pointer;
+  }
 
-	& .confirm {
-		width: 160px;
-		margin-top: 30px;
-	}
+  & .confirm {
+    width: 160px;
+    margin-top: 30px;
+  }
 }
 
 .report {
-	width: 450px;
-	min-height: 150px;
-	border-radius: 8px;
-	background: rgba(255, 255, 255, .6); 
-	margin-bottom: 30px;
-	color: #333;
-	box-sizing: border-box;
-	padding: 30px 20px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	box-shadow: 0 0 8px 0 rgba(0,0,0,.3);
+  width: 450px;
+  min-height: 150px;
+  border-radius: 8px;
+  background: rgba(255, 255, 255, 0.6);
+  margin-bottom: 30px;
+  color: #333;
+  box-sizing: border-box;
+  padding: 30px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.3);
 
-	& p {
-		color: #333;
-	}
+  & p {
+    color: #333;
+  }
 
-	& ul {
-		width: 100%;
-		padding-left: 10px;
+  & ul {
+    width: 100%;
+    padding-left: 10px;
 
-		& li {
-			display: flex;
-			flex-direction: row;
-			align-items: center;
-			flex-wrap: wrap;
+    & li {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      flex-wrap: wrap;
 
-			& span {
-				font-size: 12px;
-				margin-left: 5px;
-				letter-spacing: -0.3;
-				color: rgba(0, 0, 0, 0.4);
-			}
-		} 
-	}
+      & span {
+        font-size: 12px;
+        margin-left: 5px;
+        letter-spacing: -0.3;
+        color: rgba(0, 0, 0, 0.4);
+      }
+    }
+  }
 
-	h3 {
-		width: 100%;
-		color: @primary;
-		font-size: 20px;
-		margin-top: 10px;
-		margin-bottom: 5px;
-	}
+  h3 {
+    width: 100%;
+    color: @primary;
+    font-size: 20px;
+    margin-top: 10px;
+    margin-bottom: 5px;
+  }
 
-	.tags {
-		display: flex;
-		flex-direction: row;
-		flex-wrap: wrap;
-		width: 100%;
-		margin: 5px 0;
+  .tags {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    margin: 5px 0;
 
-		& div {
-			border: 1px solid @primary;
-			border-radius: 100px;
-			margin: 7px 0;
-			margin-right: 10px;
-			padding: 10px 15px;
+    & div {
+      border: 1px solid @primary;
+      border-radius: 100px;
+      margin: 7px 0;
+      margin-right: 10px;
+      padding: 10px 15px;
 
-			& span {
-				font-size: 12px;
-				margin-left: 5px;
-				letter-spacing: -0.3;
-				color: rgba(0, 0, 0, 0.4);
-			}
-		}
-	}
+      & span {
+        font-size: 12px;
+        margin-left: 5px;
+        letter-spacing: -0.3;
+        color: rgba(0, 0, 0, 0.4);
+      }
+    }
+  }
 }
