--- a/imports/less/App.less
+++ b/imports/less/App.less
@@ -225,3 +225,84 @@
     }
   }
 }
+
+.info {
+  height: 450px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  & > div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 10px 0;
+    width: 450px;
+
+    & > span {
+      margin-right: 40px;
+      width: 24px;
+      height: 24px;
+      font-size: 14px;
+      border-radius: 50%;
+      background-color: @lightBlue;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #fff;
+    }
+
+    & > p > span {
+      color: @lightBlue;
+    }
+  }
+}
+
+.people {
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 80px;
+
+  & > .members {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    & > .member {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 10px 30px;
+
+      & > div {
+        height: 120px;
+        width: 120px;
+        border-radius: 50%;
+      }
+
+      & > h4 {
+        margin-bottom: 0;
+      }
+
+      & > p {
+        margin: 0;
+        font-size: 12px;
+        opacity: 0.8;
+      }
+    }
+  }
+}
+
+.footer {
+  height: 40px;
+  width: 100vw;
+  font-size: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #eee;
+}
