--- a/imports/less/App.less
+++ b/imports/less/App.less
@@ -156,20 +156,68 @@
   }
 }
 
-.report {
-  width: 450px;
-  min-height: 150px;
-  border-radius: 8px;
-  background: rgba(255, 255, 255, 0.6);
+.full-report {
+  width: 720px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   margin-bottom: 30px;
-  color: #333;
+
+  & .left {
+    width: 450px;
+    height: 400px;
+
+    & .action {
+      & p {
+        margin-bottom: 12px;
+      }
+
+      & input {
+        width: 100%;
+        height: 24px;
+        font-size: 16px;
+        outline: 0;
+      }
+    }
+  }
+
+  & .right {
+    width: 250px;
+    height: 400px;
+
+    &.report-box {
+      justify-content: flex-start;
+    }
+  }
+}
+
+.report-box {
   box-sizing: border-box;
   padding: 30px 20px;
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.1);
+  color: #333;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.3);
+  border-radius: 8px;
+
+  & h4 {
+    font-size: 16px;
+    margin: 0;
+    width: 100%;
+    font-weight: 600;
+  }
+
+  & p.sub {
+    font-size: 14px;
+  }
+}
+
+.report {
+  width: 450px;
+  min-height: 150px;
+  margin-bottom: 18px;
 
   & p {
     color: #333;
@@ -177,7 +225,8 @@
 
   & ul {
     width: 100%;
-    padding-left: 10px;
+    padding-left: 0;
+    margin-bottom: 0;
 
     & li {
       display: flex;
