--- a/imports/less/App.less
+++ b/imports/less/App.less
@@ -165,25 +165,37 @@
 
   & .left {
     width: 450px;
-    height: 400px;
 
     & .action {
       & p {
         margin-bottom: 12px;
       }
+    }
 
-      & input {
+    & form {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+
+      & input[type="text"] {
         width: 100%;
         height: 24px;
-        font-size: 16px;
+        font-size: 14px;
         outline: 0;
+        padding-left: 5px;
+        color: @primary;
+      }
+
+      & input[type="submit"] {
+        width: 80px;
+        margin-top: 10px;
       }
     }
   }
 
   & .right {
     width: 250px;
-    height: 400px;
+    height: 460px;
 
     &.report-box {
       justify-content: flex-start;
@@ -221,6 +233,14 @@
 
   & p {
     color: #333;
+  }
+
+  & .time-picker {
+    margin-top: 20px;
+
+    & p.sub {
+      margin-bottom: 5px;
+    }
   }
 
   & ul {
