--- a/imports/less/App.less
+++ b/imports/less/App.less
@@ -46,7 +46,7 @@
       width: 80px;
       margin: 5px 0;
       margin-top: 10px;
-      opacity: 0.7;
+      opacity: 0.9;
 
       &:hover {
         opacity: 0.95;
@@ -103,6 +103,30 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    background: url("http://smalldata.io/img/homepage.jpg");
+    background-size: cover;
+    min-width: 100vw;
+    min-height: 100vh;
+
+    & .overlay {
+      background: rgba(0, 0, 0, 0.4);
+      width: 100vw;
+      height: 100vh;
+      position: absolute;
+      top: 0;
+      left: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+
+  & .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     & h3 {
       margin-bottom: 5px;
@@ -114,6 +138,10 @@
       &.sub {
         opacity: 0.4;
         margin-bottom: 25px;
+
+        &.on-overlay {
+          color: rgba(255, 255, 255, 0.85);
+        }
       }
     }
   }
@@ -123,6 +151,7 @@
     top: 15px;
     right: 30px;
     cursor: pointer;
+    color: @lightBlue;
   }
 }
 
@@ -182,6 +211,7 @@
         height: 24px;
         font-size: 14px;
         outline: 0;
+        border: none;
         padding-left: 5px;
         color: @primary;
       }
@@ -206,7 +236,8 @@
 .report-box {
   box-sizing: border-box;
   padding: 30px 20px;
-  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.3);
+  background-color: rgba(255, 255, 255, 0.8);
   color: #333;
   display: flex;
   flex-direction: column;
@@ -223,6 +254,55 @@
 
   & p.sub {
     font-size: 14px;
+  }
+
+  & .history {
+    padding: 0;
+    margin: 5px 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+
+    & li {
+      margin: 8px 0;
+      list-style: none;
+      padding-left: 0;
+
+      & .sug-send {
+        font-size: 12px;
+        opacity: 0.4;
+        margin-bottom: -3px;
+      }
+
+      & .sug-time {
+        font-size: 14px;
+        margin-top: 4px;
+        font-size: 12px;
+        padding-left: 12px;
+      }
+
+      & .sug-title {
+        font-weight: bold;
+        color: #333;
+        position: relative;
+        width: fit-content;
+
+        &::before {
+          content: "";
+          position: absolute;
+          bottom: -5%;
+          left: 5%;
+          right: 5%;
+          margin: 0 5%;
+          height: 40%;
+          width: 80%;
+          background-color: @yellow;
+          opacity: 0.6;
+          border-radius: 3px;
+        }
+      }
+    }
   }
 }
 
