--- a/imports/less/App.less
+++ b/imports/less/App.less
@@ -455,3 +455,57 @@
   justify-content: center;
   background-color: #eee;
 }
+
+.root {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: url("http://smalldata.io/img/homepage.jpg");
+  background-size: cover;
+  min-width: 100vw;
+  min-height: 100vh;
+}
+
+.categoryContainer {
+  height: 520px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.categoryRow {
+  width: 800px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.subCategoryContainer {
+  display: flex;
+  flex-direction: column;
+}
+
+.onboardingBtn {
+  height: 40px;
+  width: 280px;
+  background-color: rgb(255, 208, 0);
+  opacity: 0.8;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.categoryCard {
+  display: flex;
+  height: 150px;
+  width: 230px;
+  background-color: white;
+  opacity: 0.6;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
