--- a/imports/less/App.less
+++ b/imports/less/App.less
@@ -196,6 +196,8 @@
     width: 450px;
 
     & .action {
+      align-items: flex-start;
+
       & p {
         margin-bottom: 12px;
       }
@@ -254,6 +256,18 @@
 
   & p.sub {
     font-size: 14px;
+  }
+
+  & button {
+    width: 100px;
+    height: 24px;
+    font-size: 14px;
+    margin-bottom: 0;
+    cursor: pointer;
+
+    &:hover {
+      transform: scale(1);
+    }
   }
 
   & .history {
@@ -454,16 +468,6 @@
   align-items: center;
   justify-content: center;
   background-color: #eee;
-}
-
-.root {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: url("http://smalldata.io/img/homepage.jpg");
-  background-size: cover;
-  min-width: 100vw;
-  min-height: 100vh;
 }
 
 .categoryContainer {
