--- a/imports/less/App.less
+++ b/imports/less/App.less
@@ -35,6 +35,14 @@
     transition: all 0.3s ease;
     margin-bottom: 10px;
 
+    &.outline {
+      background-color: transparent;
+      box-shadow: none;
+      border: 1px solid @primary;
+      color: @primary;
+      border-radius: 4px;
+    }
+
     &:hover {
       transform: scale(1.1);
       opacity: 0.95;
@@ -301,20 +309,6 @@
         color: #333;
         position: relative;
         width: fit-content;
-
-        &::before {
-          content: "";
-          position: absolute;
-          bottom: -5%;
-          left: 5%;
-          right: 5%;
-          margin: 0 5%;
-          height: 40%;
-          width: 80%;
-          background-color: @yellow;
-          opacity: 0.6;
-          border-radius: 3px;
-        }
       }
     }
   }
@@ -474,19 +468,28 @@
   height: 520px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
 
 .categoryRow {
   width: 800px;
   display: flex;
+  margin: 15px 0;
   justify-content: space-between;
 }
 
 .subCategoryContainer {
   display: flex;
   flex-direction: column;
+  width: 80%;
+  margin: 0 auto;
+
+  & label {
+    font-size: 14px;
+    cursor: pointer;
+    margin-bottom: 3px;
+  }
 }
 
 .onboardingBtn {
@@ -498,6 +501,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 30px;
   cursor: pointer;
 }
 
