--- a/imports/less/App.less
+++ b/imports/less/App.less
@@ -298,10 +298,14 @@
       }
 
       & .sug-time {
+        width: fit-content;
         font-size: 14px;
         margin-top: 4px;
+        margin-bottom: 6px;
+        margin-left: 12px;
         font-size: 12px;
-        padding-left: 12px;
+        padding: 1px 2px;
+        border: 1px solid rgba(0, 0, 0, 0.2);
       }
 
       & .sug-title {
