--- a/imports/less/App.less
+++ b/imports/less/App.less
@@ -508,9 +508,13 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   align-items: center;
   justify-content: center;
+
+  & label {
+    width: 80%;
+  }
 }
 
-.subCategorySplit{
+.subCategorySplit {
   display: block;
   position: relative;
   padding: 0;
@@ -528,6 +532,7 @@
 
 .onboardingBtn {
   height: 40px;
+  min-height: 40px;
   width: 280px;
   background-color: rgb(255, 208, 0);
   opacity: 0.8;
