--- a/imports/less/App.less
+++ b/imports/less/App.less
@@ -548,16 +548,31 @@
   display: flex;
   height: 150px;
   width: 230px;
+  background-size: 230px 150px;
   background-color: white;
-  opacity: 0.6;
+  color: white;
+  opacity: 0.8;
   border-radius: 8px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   flex-direction: column;
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  z-index: 10;
   -webkit-user-select: none; /* Safari 3.1+ */
   -moz-user-select: none; /* Firefox 2+ */
   -ms-user-select: none; /* IE 10+ */
   user-select: none; /* Standard syntax */
+}
+
+#productivityClick {
+  background-image: url("https://i.ibb.co/LzLXdR2/bigstock-Closeup-Businessman-Working-La-274878958.jpg") 
+}
+
+#wellnessClick {
+  background-image: url("https://i.ibb.co/TcW8dvP/wellness.jpg") 
+}
+
+#leisureClick {
+  background-image: url("https://i.ibb.co/RSHqZjy/leisure.jpg") 
 }
