--- a/imports/less/App.less
+++ b/imports/less/App.less
@@ -563,16 +563,27 @@
   -moz-user-select: none; /* Firefox 2+ */
   -ms-user-select: none; /* IE 10+ */
   user-select: none; /* Standard syntax */
+  text-align: center;
 }
 
-#productivityClick {
+#productivityCard {
   background-image: url("https://i.ibb.co/LzLXdR2/bigstock-Closeup-Businessman-Working-La-274878958.jpg") 
 }
 
-#wellnessClick {
+#wellnessCard {
   background-image: url("https://i.ibb.co/TcW8dvP/wellness.jpg") 
 }
 
-#leisureClick {
+#leisureCard {
   background-image: url("https://i.ibb.co/RSHqZjy/leisure.jpg") 
+}
+
+.categoryClick {
+  display: block;
+  height: 100%;
+  width: 100%;
+  line-height:150px;
+  font-size: 30px;
+  color: white;
+  text-decoration: none;
 }
