--- a/imports/less/App.less
+++ b/imports/less/App.less
@@ -191,6 +191,60 @@
     width: 160px;
     margin-top: 30px;
   }
+
+  & h5 {
+    font-size: 18px;
+    margin: 0;
+    margin-bottom: 6px;
+  }
+
+  & .logs {
+    display: flex;
+    flex-direction: row;
+    margin: 12px 0;
+
+    & .log {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      margin-right: 10px;
+      width: 160px;
+      height: 60px;
+      border-radius: 8px;
+      border: 1px solid rgba(0, 0, 0, 0.4);
+
+      & h6 {
+        font-size: 16px;
+        color: @primary;
+        margin: 0;
+      }
+
+      & p {
+        font-size: 12px;
+      }
+    }
+  }
+
+  & .download {
+    margin-top: 10px;
+    margin-bottom: 20px;
+    border: none;
+    height: 32px;
+    width: 200px;
+    font-size: 14px;
+    outline: 0;
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid @primary;
+    color: @primary;
+    border-radius: 4px;
+    transition: all 0.3s ease;
+
+    &:hover {
+      transform: scale(1.05);
+    }
+  }
 }
 
 .full-report {
@@ -567,22 +621,22 @@
 }
 
 #productivityCard {
-  background-image: url("https://i.ibb.co/LzLXdR2/bigstock-Closeup-Businessman-Working-La-274878958.jpg") 
+  background-image: url("https://i.ibb.co/LzLXdR2/bigstock-Closeup-Businessman-Working-La-274878958.jpg");
 }
 
 #wellnessCard {
-  background-image: url("https://i.ibb.co/TcW8dvP/wellness.jpg") 
+  background-image: url("https://i.ibb.co/TcW8dvP/wellness.jpg");
 }
 
 #leisureCard {
-  background-image: url("https://i.ibb.co/RSHqZjy/leisure.jpg") 
+  background-image: url("https://i.ibb.co/RSHqZjy/leisure.jpg");
 }
 
 .categoryClick {
   display: block;
   height: 100%;
   width: 100%;
-  line-height:150px;
+  line-height: 150px;
   font-size: 30px;
   color: white;
   text-decoration: none;
