--- a/imports/less/App.less
+++ b/imports/less/App.less
@@ -596,6 +596,11 @@
   justify-content: center;
   margin-top: 30px;
   cursor: pointer;
+
+  &.disabled {
+    opacity: 0.6;
+    cursor: default;
+  }
 }
 
 .categoryCard {
