--- a/imports/less/App.less
+++ b/imports/less/App.less
@@ -246,14 +246,14 @@
 }
 
 .full-report {
-  width: 720px;
+  width: 740px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   margin-bottom: 30px;
 
   & .left {
-    width: 450px;
+    width: 470px;
 
     & .action {
       align-items: flex-start;
@@ -269,13 +269,15 @@
       flex-direction: column;
 
       & input[type="text"] {
-        width: 100%;
-        height: 24px;
+        width: 40%;
+        height: 20px;
         font-size: 14px;
         outline: 0;
         border: none;
-        padding-left: 5px;
+        padding-left: 10px;
         color: @primary;
+        border-radius: 100px;
+        margin: 6px 0 0;
       }
 
       & input[type="submit"] {
@@ -371,7 +373,7 @@
 }
 
 .report {
-  width: 450px;
+  width: 470px;
   min-height: 150px;
   margin-bottom: 18px;
 
@@ -614,6 +616,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: relative;
   cursor: pointer;
   z-index: 10;
   -webkit-user-select: none; /* Safari 3.1+ */
@@ -621,6 +624,18 @@
   -ms-user-select: none; /* IE 10+ */
   user-select: none; /* Standard syntax */
   text-align: center;
+
+  .card-overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 8px;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 #productivityCard {
@@ -643,4 +658,11 @@
   font-size: 30px;
   color: white;
   text-decoration: none;
+
+  span {
+    font-size: 14px;
+    opacity: 0.6;
+    display: block;
+    margin-top: -120px;
+  }
 }
