--- a/imports/less/App.less
+++ b/imports/less/App.less
@@ -66,7 +66,7 @@
   & .login {
     width: 100vw;
     height: 100vh;
-    background-size: cover;
+    background-size: cover !important;
 
     & h3 {
       color: #c2c2c2;
@@ -111,7 +111,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-size: cover;
+    background-size: cover !important;
     min-width: 100vw;
     min-height: 100vh;
 
@@ -664,5 +664,48 @@
     opacity: 0.6;
     display: block;
     margin-top: -120px;
+  }
+}
+
+.modal-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.75);
+  z-index: 10000000000000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .modal-body {
+    margin-top: 100px;
+    width: 480px;
+    min-height: 60px;
+    background-color: #fff;
+    position: relative;
+    box-shadow: 0 0 8px 0 rgba(255, 255, 255, 0.5);
+    box-sizing: border-box;
+    padding: 10px 16px;
+    border-radius: 8px;
+
+    span {
+      position: absolute;
+      right: 10px;
+      top: 10px;
+      transform: rotate(45deg);
+      font-size: 18px;
+      cursor: pointer;
+    }
+
+    p {
+      font-size: 14px;
+      margin: 16px 0 18px;
+      padding: 0 6px;
+      max-width: 100%;
+      line-height: 1.3;
+      padding-right: 12px;
+    }
   }
 }
